--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Quebra-Cabeça Slide</title>
-    <script defer src="/scripts/index.js"></script>
-    <link rel="stylesheet" href="/styles/index.css">
+    <script defer src="./scripts/index.js"></script>
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
     <div class="container">
